# chat_bot

./: .env.example  .gitignore  BOOTSTRAP.md  ISSUES.md  README.md  pyproject.toml  rendered-prompt-mysql.txt  rendered-prompt-pg.txt
app/: cli.py  config.py  main.py
app/chatbot/: _perf_cache.py  answer_formatter.py  chat_service.py  column_check.py  embed_client.py  engine_router.py  example_store.py  router.py  (+12 more)
data/: examples.json  fast_path_questions.json  llm_optimized_schema_spec.md  schema_context.md  schema_context_mysql.md  schema_definitions.json  schema_definitions.json.bak
eval/: TEST_RESULTS.md  baseline.json  build_cases_from_questionnaire.py  cases copy.json  cases.json  cases.json.bak  manual_run.txt  manual_run2.txt  manual_run3.txt  manual_suite.py  manual_suite2.py  questionnaire copy.md  questionnaire.md  run.py
scripts/: _seed_mysql_schema.py  apply_clarify_constraint.py  build_schema_definitions.py  debug_mysql.py  debug_retrieval.py  dump_prompt.py  embed_examples.py  ingest_fast_path.py  ingest_profiles.py  ingest_schema.py  probe_routing.py  profile_schema.py  prune_schema_embeddings.py  validate_examples.py  warmup.ps1
sql/: 000_preflight_columns.sql  001_chatbot_ro_role.sql  002_rls_policies.sql  003_mv_market_daily_view.sql  004_category_map_and_view.sql  005_pgvector_examples.sql  006_schema_embeddings.sql  007_fast_path_embeddings.sql  rollback.sql
tests/: test_chat_service.py  test_config.py  test_engine_router.py  test_normalize_question.py  test_prompt_builder.py  test_schema_store.py  test_sql_guard.py  test_sql_guard_mysql.py
(+46 files in other folders)
